# icfp2015

./: .gitignore  Makefile  README  viewer.py
data/: example_solution.json  team.json
scripts/: post  solveall  solveallseparate
solutions/: all.json  problem_0_solution.json  problem_10_solution.json  problem_11_solution.json  problem_12_solution.json  problem_13_solution.json  problem_14_solution.json  problem_15_solution.json  problem_16_solution.json  problem_17_solution.json  problem_18_solution.json  problem_19_solution.json  problem_1_solution.json  problem_20_solution.json  problem_21_solution.json  problem_22_solution.json  problem_23_solution.json  problem_2_solution.json  problem_3_solution.json  problem_4_solution.json  problem_5_solution.json  problem_6_solution.json  problem_7_solution.json  problem_8_solution.json  problem_9_solution.json
src/: astar.py  clever_solver.py  coords.py  game.py  hx.py  power.py  random_solver.py  search_solver.py  solver.py  test_astar.py  test_coords.py  test_game.py  test_hx.py  test_power.py  viewer.py
src/cpp/: CMakeLists.txt  hx.cpp  hx.h  hx_test.cpp
